[gd_scene load_steps=3 format=3 uid="uid://action_map_ui"]

[ext_resource type="Script" path="res://src/ui/action_map_ui.gd" id="1_action_map_ui_script"]

[node name="ActionMapUI" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_action_map_ui_script")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Header" type="HBoxContainer" parent="Panel/VBox"]
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="Panel/VBox/Header"]
text = "Action Map"
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18

[node name="SummaryLabel" type="Label" parent="Panel/VBox/Header"]
text = "Actions:"
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="RefreshButton" type="Button" parent="Panel/VBox/Header"]
text = "Refresh"

[node name="CloseButton" type="Button" parent="Panel/VBox/Header"]
custom_minimum_size = Vector2(28, 28)
theme_override_font_sizes/font_size = 14
text = "âœ•"
tooltip_text = "Close panel"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBox"]
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="ActionList" type="VBoxContainer" parent="Panel/VBox/ScrollContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="Footer" type="Label" parent="Panel/VBox"]
text = "Shows InputMap bindings and where each action is used."
theme_override_font_sizes/font_size = 12
autowrap_mode = 2
